--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ img {
 	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 14.jpg</a>"</p>
 
 <img src="images/portrait of the artist 7.24.19.jpg" title="July 24, 2019">
-	<p class="title">"portrait of the artist 7.24.19.jpg</p>
+	<p class="title">"portrait of the artist 7.24.19.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=FvQkJQyEEEk" target="_blank"><img src="images/4 me.jpg" title="July 23, 2019"></a>
 	<p class="title">"4 me.jpg" (<a href="https://www.youtube.com/watch?v=FvQkJQyEEEk" target="_blank">⏱️</a>)</p>
@@ -1057,259 +1057,255 @@ img {
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    February 2019    ––––</i></p>
 
 <img src="images/lightbulb.jpg" title="February 28, 2019">
-	<p class="title">.</p>
+	<p class="title">"lightbulb.jpg"</p>
 
 <img src="images/babyits.gif" title="February 27, 2019">
-	<p class="title">.</p>
+	<p class="title">"babyits.gif"</p>
 
 <img src="images/2.26.19.jpg" title="February 26, 2019">
-	<p class="title">.</p>
+	<p class="title">"2.26.19.jpg"</p>
 
 <a href="https://www.tomspage.org/images/peter%202.26.19.jpg" target="_blank"><img src="images/at sea 2.26.19.jpg" title="February 26, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"at sea 2.26.19.jpg"</p>
 
 <img src="images/audrey III.jpg" title="February 25, 2019">
-	<p class="title">.</p>
+	<p class="title">"audrey iii.jpg"</p>
 
 <img src="images/hot tip 3.jpg" title="February 25, 2019">
 	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 3.jpg</a>"</p>
 
 <img src="images/2.24.19.jpg" title="February 24, 2019">
-	<p class="title">.</p>
+	<p class="title">"2.24.19.jpg"</p>
 
 <img src="images/keepitup2.gif" title="February 23, 2019">
-	<p class="title">.</p>
+	<p class="title">"keepitup2.gif"</p>
 
 <img src="images/ride%20the%20wave.jpg" title="February 22, 2019">
-	<p class="title">.</p>
+	<p class="title">"ride the wave.jpg"</p>
 
 <img src="images/forge%20&%20foundry.jpg" title="February 22, 2019">
-	<p class="title">.</p>
+	<p class="title">"forge & foundry.jpg"</p>
 
 <img src="images/this%20is%20a%20true%20story.jpg" title="February 22, 2019">
-	<p class="title">.</p>
+	<p class="title">"this is a true story.jpg"</p>
 
 <img src="images/lincoln.jpg" title="February 21, 2019">
-	<p class="title">.</p>
+	<p class="title">"lincoln.jpg"</p>
 
 <img src="images/dry.jpg" title="February 21, 2019">
-	<p class="title">.</p>
+	<p class="title">"dry.jpg"</p>
 
 <img src="images/alas.jpg" title="February 20, 2019">
-	<p class="title">.</p>
+	<p class="title">"alas.jpg"</p>
 
 <img src="images/evil.jpg" title="February 19, 2019">
-	<p class="title">.</p>
+	<p class="title">"evil.jpg"</p>
 
 <img src="images/hey%21.jpg" title="February 18, 2019">
-	<p class="title">.</p>
+	<p class="title">"hey!.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=WIWbgR4vYiw" target="_blank"><img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%29.jpg" title="February 18, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"blue moon (oh, don't leave me on my own).jpg"</p>
 
 <img src="images/peter%20painting.jpg" title="February 18, 2019">
-	<p class="title">.</p>
+	<p class="title">"painting.jpg"</p>
 
 <img src="images/ride.jpg" title="February 17, 2019">
-	<p class="title">.</p>
+	<p class="title">"ride.jpg"</p>
 
 <img src="images/hot%20tip%202.jpg" title="February 16, 2019">
 	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 2.jpg</a>"</p>
 
 <img src="images/2%2E15%2E19%201.jpg" title="February 15, 2019">
-	<p class="title">.</p>
+	<p class="title">"2.15.19 2.jpg"</p>
 
 <img src="images/2%2E15%2E19.jpg" title="February 15, 2019">
-	<p class="title">.</p>
+	<p class="title">"2.15.19.jpg"</p>
 
 <img src="images/hot%20tip.jpg" title="February 15, 2019">
 	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 1.jpg</a>"</p>
 
 <img src="images/the%20address.jpg" title="February 13, 2019">
-	<p class="title">.</p>
+	<p class="title">" the address.jpg"</p>
 
 <img src="images/in considering our circumstances%2C.jpg" title="February 12, 2019">
-	<p class="title">.</p>
+	<p class="title">"in considering our circumstances,.jpg"</p>
 
 <img src="images/what%20are%20we%20supposed.jpg" title="February 12, 2019">
-	<p class="title">.</p>
+	<p class="title">" what are we supposed.jpg"</p>
 
 <img src="images/2%2E11%2E19.jpg" title="February 11, 2019">
-	<p class="title">.</p>
+	<p class="title">"2.11.19.jpg"</p>
 
 <img src="images/but%20what%20about%20you.jpg" title="February 11, 2019">
-	<p class="title">.</p>
+	<p class="title">"but what about you.jpg"</p>
 
 <img src="images/earth.jpg" title="February 10, 2019">
-	<p class="title">.</p>
+	<p class="title">"location.jpg"</p>
 
 <img src="images/at%20sea.jpg" title="February 10, 2019">
-	<p class="title">.</p>
+	<p class="title">"at sea.jpg"</p>
 
 <img src="images/o%21.jpg" title="February 10, 2019">
-	<p class="title">.</p>
+	<p class="title">"<i>o!</i>.jpg"</p>
 
 <img src="images/sail%20on.jpg" title="February 10, 2019">
-	<p class="title">.</p>
+	<p class="title">"sail on.jpg"</p>
 
 <img src="images/stained%20glass.jpg" title="February 9, 2019">
-	<p class="title">.</p>
+	<p class="title">"stained glass.jpg"</p>
 
 <img src="images/off%20to%20the%20races.jpg" title="February 8, 2019">
-	<p class="title">.</p>
+	<p class="title">"off to the races.jpg"</p>
 
 <img src="images/note%20to%20self%202%2E8%2E19.jpg" title="February 8, 2019">
-	<p class="title">.</p>
+	<p class="title">"note to self 2.8.19.jpg"</p>
 
 <img src="images/liftoff%202%2E6%2E19%2Ejpg" title="February 6, 2019">
-	<p class="title">.</p>
+	<p class="title">"liftoff 2.6.19.jpg"</p>
 
 <img src="images/portrait%20of%20the%20artist.jpg" title="February 6, 2019">
-	<p class="title">.</p>
+	<p class="title">"portrait of the artist 2.6.19.jpg"</p>
 
 <img src="images/return%20or%20renew.jpg" title="February 5, 2019">
-	<p class="title">.</p>
+	<p class="title">"return or renew.jpg"</p>
 
+	
+	
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    January 2019    ––––</i></p>
 
 <img src="images/sue me%21.jpg" title="January 31, 2019">
-	<p class="title">.</p>
+	<p class="title">"sue me!.jpg"</p>
 
 <img src="images/magical machine.jpg" title="January 31, 2019">
-	<p class="title">.</p>
+	<p class="title">"magical machine.jpg"</p>
 
 <img src="images/rising storm.jpg" title="January 30, 2019">
-	<p class="title">.</p>
+	<p class="title">"rising storm.jpg"</p>
 
 <img src="images/crossroads.jpg" title="January 30, 2019">
-	<p class="title">.</p>
+	<p class="title">"crossroads.jpg"</p>
 
 <img src="images/in the desert.jpg" title="January 29, 2019">
-	<p class="title">.</p>
+	<p class="title">"in the desert.jpg"</p>
 
 <img src="images/so long and thanks for all the fish.jpg" title="January 27, 2019">
-	<p class="title">.</p>
+	<p class="title">"so long and thanks for all the fish.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=QWtsV50_-p4" target="_blank"><img src="images/where are we now%3F.jpg" title="January 26, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"where are we now?.jpg"</p>
 
 <img src="images/guitarist.jpg" title="January 25, 2019">
-	<p class="title">.</p>
+	<p class="title">"guitarist.jpg"</p>
 
 <img src="images/a cucumber.jpg" title="January 25, 2019">
-	<p class="title">.</p>
+	<p class="title">"cuc.jpg"</p>
 
 <img src="images/light 1.25.19.jpg" title="January 25, 2019">
-	<p class="title">.</p>
+	<p class="title">"light 1.25.19.jpg"</p>
 
 <img src="images/forecasts call for.jpg" title="January 23, 2019">
-	<p class="title">.</p>
+	<p class="title">"forecasts call for.jpg"</p>
 
 <img src="images/%5C%5C.jpg" title="January 22, 2019">
-	<p class="title">.</p>
+	<p class="title">"\\"</p>
 
 <img src="images/foreign correspondence.jpg" title="January 22, 2019">
-	<p class="title">.</p>
+	<p class="title">"foreign correspondence.jpg"</p>
 
 <img src="images/the return.jpg" title="January 22, 2019">
-	<p class="title">.</p>
+	<p class="title">"the return.jpg"</p>
 
 <img src="images/charlie echo.jpg" title="January 20, 2019">
-	<p class="title">.</p>
+	<p class="title">"charlie.jpg"</p>
 
 <img src="images/liftoff.jpg" title="January 20, 2019">
-	<p class="title">.</p>
+	<p class="title">"liftoff.jpg"</p>
 
 <img src="images/tired 2.jpg" title="January 19, 2019">
-	<p class="title">.</p>
-
-<img src="images/tired.jpg" title="January 19, 2019">
-	<p class="title">.</p>
+	<p class="title">"tired.jpg"</p>
 
 <img src="images/falmouth car wash.jpg" title="January 18, 2019">
-	<p class="title">.</p>
+	<p class="title">"wash.jpg"</p>
 
 <img src="images/turbine.jpg" title="January 17, 2019">
-	<p class="title">.</p>
+	<p class="title">"turbine.jpg"</p>
 
 <img src="images/how%27s the view%3F.jpg" title="January 16, 2019">
-	<p class="title">.</p>
+	<p class="title">"how's the view?.jpg"</p>
 
 <img src="images/the unanimous declaration.jpg" title="January 15, 2019">
-	<p class="title">.</p>
+	<p class="title">"the unanimous declaration.jpg"</p>
 
 <img src="images/in congress.jpg" title="January 15, 2019">
-	<p class="title">.</p>
+	<p class="title">"in congress.jpg"</p>
 
 <img src="images/shine.jpg" title="January 15, 2019">
-	<p class="title">.</p>
+	<p class="title">"shine.jpg"</p>
 
 <img src="images/x__write_songs_%21.jpg" title="January 14, 2019">
-	<p class="title">.</p>
-
-<img src="images/loading the frepis.png" title="January 14, 2019">
-	<p class="title">.</p>
+	<p class="title">"x__write_songs_!.jpg"</p>
 
 <img src="images/points west.jpg" title="January 14, 2019">
-	<p class="title">.</p>
+	<p class="title">"points west.jpg"</p>
 
 <img src="images/time.jpg" title="January 10, 2019">
-	<p class="title">.</p>
+	<p class="title">"time.jpg"</p>
 
 <img src="images/revelation.jpg" title="January 10, 2019">
-	<p class="title">.</p>
+	<p class="title">"revelation.jpg"</p>
 
 <img src="images/pattern.jpg" title="January 9, 2019">
-	<p class="title">.</p>
+	<p class="title">"pattern.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=kszLwBaC4Sw" target="_blank"><img src="images/blackstars.jpg" title="★ January 8, 2019 ★"></a>
-	<p class="title">.</p>
+	<p class="title">★ "blackstars.jpg" ★</p>
 
 <img src="images/checker.jpg" title="January 8, 2019">
-	<p class="title">.</p>
+	<p class="title">"checker.jpg"</p>
 
 <img src="images/reminder.jpg" title="January 7, 2019">
-	<p class="title">.</p>
+	<p class="title">"reminder.jpg"</p>
 
 <img src="images/Tom%27s poster.jpg" title="January 7, 2019">
-	<p class="title">.</p>
+	<p class="title">"note to self 1.7.19"</p>
 
 <img src="images/well%3F.jpg" title="January 7, 2019">
-	<p class="title">.</p>
+	<p class="title">"well?.jpg"</p>
 
 <a href="https://www.tomspage.org/images/judgment%20of%20the%20birds.jpg" target="_blank"><img src="images/eiseley.jpg" title="January 6, 2019"></a>
 	<p class="title">.        </p>
 
 <img src="images/goose 2.jpg" title="January 6, 2019">
-	<p class="title">.</p>
+	<p class="title">"goose 2.jpg"</p>
 
 <img src="images/goose 1.jpg" title="January 6, 2019">
-	<p class="title">.</p>
+	<p class="title">"goose 1.jpg"</p>
 
 <img src="images/note to self.jpg" title="January 5, 2019">
-	<p class="title">.</p>
+	<p class="title">"note to self.jpg"</p>
 
 <img src="images/though you may be wondering.jpg" title="January 5, 2019">
-	<p class="title">.</p>
+	<p class="title">"though you may be wondering.jpg"</p>
 
 <img src="images/finch.jpg" title="January 5, 2019">
-	<p class="title">.</p>
+	<p class="title">"finch.jpg"</p>
 
 <img src="images/warning.jpg" title="January 3, 2019">
-	<p class="title">.</p>
+	<p class="title">"warning.jpg"</p>
 
 <img src="images/you 2.jpg" title="January 2, 2019">
-	<p class="title">.</p>
+	<p class="title">"you 2.jpg"</p>
 
 <img src="images/mission.png" title="January 2, 2019">
-	<p class="title">.</p>
+	<p class="title">"mission.jpg"</p>
 
 <img src="images/year of the pig.png" title="January 2, 2019">
-	<p class="title">.</p>
+	<p class="title">"year of the pig.jpg"</p>
 
 <img src="images/road.jpg" title="January 1, 2019">
-	<p class="title">.</p>
+	<p class="title">"road.jpg"</p>
 
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    December 2018    ––––</i></p>
