--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@ img {
 	margin-top: 8px;
 	margin-bottom: 50px;
 }
+a:link {
+  color: 3383ff;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:visited {
+  color: 335eff;
+  background-color: transparent;
+  text-decoration: underline;
 </style>	 
 </head>
 
