--- a/index.html
+++ b/index.html
@@ -48,15 +48,23 @@ img {
 	margin-top: 8px;
 	margin-bottom: 50px;
 }
+.masthead {
+	font-size: 16pt;
+	font-family:garamond;
+	text-align: center;
+	font-style: bold;
+	font-style: italic;
+	line-height: 10px;
+}
 a:link {
-  color: 3383ff;
-  background-color: transparent;
-  text-decoration: underline;
+	color: 3383ff;
+  	background-color: transparent;
+  	text-decoration: underline;
 }
 a:visited {
-  color: 335eff;
-  background-color: transparent;
-  text-decoration: underline;
+	color: 335eff;
+  	background-color: transparent;
+  	text-decoration: underline;
 </style>	 
 </head>
 
@@ -72,8 +80,8 @@ a:visited {
 	
 <img src="images/tomspage.png" class="logo">
 	
-<p class="body"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
-<p class="body" style="font-style: italic">by Tom</p>
+<p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
+<p class="masthead">by Tom</p>
 	
 	<br>
 	<br>
