--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@ img {
   	margin-right: auto;
      	width: 37%;
 	height: auto;
-	margin-bottom: 35px;
+	margin-bottom: 20px;
 	box-shadow: none;
+}
+.masthead {
+	font-size: 16pt;
+	font-family:garamond;
+	text-align: center;
+	font-weight: bold;
+	font-style: italic;
+	line-height: 8px;
 }
 .body {
 	font-size: 12pt;
@@ -47,14 +55,6 @@ img {
 	text-align: center;
 	margin-top: 8px;
 	margin-bottom: 50px;
-}
-.masthead {
-	font-size: 16pt;
-	font-family:garamond;
-	text-align: center;
-	font-style: bold;
-	font-style: italic;
-	line-height: 10px;
 }
 a:link {
 	color: 3383ff;
