--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@ a:visited {
 <img src="images/hypnorat.jpg" title="November 9, 2018">
 	<p class="title">"hypnorat.jpg"</p>
 
-<img src="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/shop.jpg" title="November 4, 2018">
+<img src="images/shop.jpg" title="November 4, 2018">
 	<p class="title">"shop.jpg"</p>
 
 
