--- a/index.html
+++ b/index.html
@@ -57,14 +57,25 @@ img {
 	margin-bottom: 50px;
 }
 a:link {
-	color: 3383ff;
-  	background-color: transparent;
-  	text-decoration: underline;
+  color: blue;
+  background-color: transparent;
+  text-decoration: none;
 }
 a:visited {
-	color: 335eff;
-  	background-color: transparent;
-  	text-decoration: underline;
+  color: blue;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: #ff3383;
+  background-color: transparent;
+  text-decoration: underline;
+}
 </style>	 
 </head>
 
