--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@ img {
 a:link {
   color: blue;
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 a:visited {
   color: blue;
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 a:hover {
   color: blue;
