--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ img {
 	font-family:garamond;
 	color:gray;
 	text-align: center;
-	font-style: bold;
+	font-weight: bold;
 	font-style: italic;
 }
 .title {
