--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ img {
 	margin: 5px;
 }		
 .header {
-	font-size: 14pt;
+	font-size: 16pt;
 	font-family:garamond;
 	color:gray;
 	text-align: center;
-	font-weight: bold;
+	font-weight: normal;
 	font-style: italic;
 }
 .title {
@@ -739,7 +739,7 @@ a:active {
 
 	
 	
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
+<p class="header">––––    May 2019    ––––</p>
 
 <img src="images/pod.jpg" title="May 31, 2019 (released June 1, 2019)">
 	<p class="title">"pod.jpg"</p>
@@ -843,7 +843,7 @@ a:active {
 
 	
 	
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
+<p class="header">––––    April 2019    ––––</p>
 
 <a href="https://www.google.com/search?tbm=isch&q=the%20human%20condition%20painting" target="_blank"><img src="images/square landscape portrait.jpg" title="April 30, 2019 | Six months of pictures!!!"></a>
 	<p class="title">"square landscape portrait.jpg"</p>
@@ -953,7 +953,7 @@ a:active {
 
 	
 	
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
+<p class="header">––––    March 2019    ––––</p>
 
 <img src="images/into the.jpg" title="March 31, 2019">
 	<p class="title">"into the.jpg"</p>
@@ -1082,7 +1082,7 @@ a:active {
 	<p class="title">"portrait of the artist 3.1.19.jpg"</p>
 
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    February 2019    ––––</i></p>
+<p class="header">––––    February 2019    ––––</p>
 
 <img src="images/lightbulb.jpg" title="February 28, 2019">
 	<p class="title">"lightbulb.jpg"</p>
@@ -1201,7 +1201,7 @@ a:active {
 	
 	
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    January 2019    ––––</i></p>
+<p class="header">––––    January 2019    ––––</p>
 
 <img src="images/sue me%21.jpg" title="January 31, 2019">
 	<p class="title">"sue me!.jpg"</p>
@@ -1336,7 +1336,7 @@ a:active {
 	<p class="title">"road.jpg"</p>
 
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    December 2018    ––––</i></p>
+<p class="header">––––    December 2018    ––––</p>
 
 <img src="images/fireworks.jpg" title="December 31, 2018">
 	<p class="title">"fireworks.jpg"</p>
@@ -1371,7 +1371,7 @@ a:active {
 <img src="images/avant-garde.png" title="December 3, 2018">
 	<p class="title">"avant-garde.jpg"</p>
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2018    ––––</i></p>
+<p class="header">––––    November 2018    ––––</p>
 
 <img src="images/wow%21.jpg" title="November 24, 2018">
 	<p class="title">"wow!.jpg"</p>
@@ -1413,4 +1413,3 @@ a:active {
 
 </body>
 </html>
-
