--- a/songs/index.html
+++ b/songs/index.html
@@ -12,13 +12,11 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #f2f2f7;
-  	line-height: 1.1;
+	background-color: #f4f7fc;
 }
 img {
-	width: 100%;
+	width: 93%;
 	height: auto;
-	margin-bottom: 32px;
 	box-shadow: 0px 2px 5px 0px #696969;
 }
 .logo {
@@ -27,46 +25,104 @@ img {
   	margin-right: auto;
      	width: 37%;
 	height: auto;
-	margin-bottom: 5px;
+	margin-bottom: 20px;
 	box-shadow: none;
 }
-.title {
+.masthead {
 	font-size: 16pt;
-	font-family: garamond;
+	font-family:garamond;
+	text-align: center;
 	font-weight: bold;
 	font-style: italic;
-	color: #362000;
-	text-align: center;
-	margin-top: 20px;
-	margin-bottom: 1px;
+	line-height: 8px;
 }
 .body {
 	font-size: 12pt;
 	font-family: trebuchet MS;
-	font-style: italic;
+	font-style: normal;
 	color: #362000;
 	text-align: center;
-	margin: 1px;
-}	
-</style>	
-</head>		
-  
+	margin: 5px;
+}		
+.header {
+	font-size: 16pt;
+	font-family:garamond;
+	color:gray;
+	text-align: center;
+	font-weight: normal;
+	font-style: italic;
+}
+.title {
+	font-size: 12pt;
+	font-family:Trebuchet MS;
+	color: #362000;
+	text-align: center;
+	margin-top: 8px;
+	margin-bottom: 50px;
+}
+a:link {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:visited {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:hover {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: #ff3383;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>	 
+</head>
+
 <body>
-
+		
+<TITLE>
+    Tom's Page
+</TITLE>
+	
 	<br>
 	<br>
 	<br>
 	
-<img src="images/songs page 4.png" class="logo">
+<img src="images/tomspage.png" class="logo">
 	
-<p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a></p>
-<p class="body">by Tom</p>
+<p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
+<p class="masthead">by Tom</p>
+	
+	<br>
+	<br>
 
-<p style="font-size: 12pt; font-family: Trebuchet MS; font-style: italic">Submit your email address to join the mailing list:</p>
+<p class="body">Super special series:</p>
+	<p class="body" style="font-style:normal; line-height: 25px;">
+		<a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a><br>
+		<a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a><br>
+		<a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a>
+	</p>
+	
+	<br>
+	<br>
+
+<p class="body">Submit your email address to join the mailing list:</p>
 	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-	  <input type="email" name="_replyto">
-	  <input type="submit" value="Send">
+		<input type="email" name="_replyto">
+  		<input type="submit" value="Send">
 	</form>
+
+	<br>
+	<br>
+	<br>
+	<br>
+
+<img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
 	
 </body>
 </html>
