--- a/songs/index.html
+++ b/songs/index.html
@@ -30,7 +30,7 @@ img {
 }
 .masthead {
 	font-size: 16pt;
-	font-family:garamond;
+	font-family: garamond;
 	text-align: center;
 	font-weight: bold;
 	font-style: italic;
@@ -46,7 +46,7 @@ img {
 }		
 .header {
 	font-size: 16pt;
-	font-family:garamond;
+	font-family: garamond;
 	color:gray;
 	text-align: center;
 	font-weight: normal;
@@ -93,36 +93,17 @@ a:active {
 	<br>
 	<br>
 	
-<img src="images/tomspage.png" class="logo">
+<img src="images/songs page 5.png" class="logo">
 	
 <p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="masthead">by Tom</p>
 	
 	<br>
 	<br>
-
-<p class="body">Super special series:</p>
-	<p class="body" style="font-style:normal; line-height: 25px;">
-		<a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a><br>
-		<a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a><br>
-		<a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a>
-	</p>
-	
 	<br>
 	<br>
 
-<p class="body">Submit your email address to join the mailing list:</p>
-	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-		<input type="email" name="_replyto">
-  		<input type="submit" value="Send">
-	</form>
 
-	<br>
-	<br>
-	<br>
-	<br>
-
-<img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
 	
 </body>
 </html>
