--- a/songs/index.html
+++ b/songs/index.html
@@ -12,7 +12,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #ebffea;
+	background-color: #f4fff3;
 }
 img {
 	width: 93%;
