--- a/videos/index.html
+++ b/videos/index.html
@@ -11,7 +11,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #f4fff3;
+	background-color: #141414;
 }
 img {
 	width: 93%;
