--- a/videos/index.html
+++ b/videos/index.html
@@ -60,17 +60,17 @@ img {
 	margin-bottom: 50px;
 }
 a:link {
-  color: blue;
+  color: #ffffed;
   background-color: transparent;
   text-decoration: underline;
 }
 a:visited {
-  color: blue;
+  color: #ffffed;
   background-color: transparent;
   text-decoration: underline;
 }
 a:hover {
-  color: blue;
+  color: #ffffce;
   background-color: transparent;
   text-decoration: underline;
 }
