--- a/videos/index.html
+++ b/videos/index.html
@@ -95,5 +95,12 @@ a:active {
 	
 	<br>
 	<br>
-	<br>
-	<br>
+
+<p class="body">Submit your email address to join the mailing list:</p>
+	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
+		<input type="email" name="_replyto">
+  		<input type="submit" value="Send">
+	</form>
+
+</body>
+</html>
