--- a/videos/index.html
+++ b/videos/index.html
@@ -11,7 +11,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #25221f;
+	background-color: #201f21;
 }
 img {
 	width: 93%;
