--- a/videos/index.html
+++ b/videos/index.html
@@ -34,6 +34,7 @@ img {
 	font-weight: bold;
 	font-style: italic;
 	line-height: 8px;
+	color: #ffffed;
 }
 .body {
 	font-size: 12pt;
@@ -42,6 +43,7 @@ img {
 	color: #362000;
 	text-align: center;
 	margin: 5px;
+	color: #ffffed;
 }		
 .header {
 	font-size: 16pt;
@@ -50,6 +52,7 @@ img {
 	text-align: center;
 	font-weight: normal;
 	font-style: italic;
+	color: #ffffed;
 }
 .title {
 	font-size: 12pt;
