--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -11,7 +11,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #201f21;
+	background-color: #fff2df;
 }
 img {
 	width: 93%;
@@ -34,7 +34,7 @@ img {
 	font-weight: bold;
 	font-style: italic;
 	line-height: 8px;
-	color: #ffffed;
+	color: #white;
 }
 .body {
 	font-size: 12pt;
@@ -43,7 +43,7 @@ img {
 	color: #362000;
 	text-align: center;
 	margin: 5px;
-	color: #ffffed;
+	color: #white;
 }		
 .header {
 	font-size: 16pt;
@@ -52,7 +52,7 @@ img {
 	text-align: center;
 	font-weight: normal;
 	font-style: italic;
-	color: #ffffed;
+	color: #white;
 }
 .title {
 	font-size: 12pt;
@@ -91,7 +91,7 @@ a:active {
 	<br>
 	<br>
 	
-<img src="images/tomspage videos.png" class="logo">
+<img src="images/tomspage top games.png" class="logo">
 	
 <p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="masthead">by Tom</p>
