--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -43,7 +43,7 @@ img {
 	color: #362000;
 	text-align: center;
 	margin: 5px;
-	color: #white;
+	color: white;
 }		
 .header {
 	font-size: 16pt;
@@ -52,7 +52,6 @@ img {
 	text-align: center;
 	font-weight: normal;
 	font-style: italic;
-	color: #white;
 }
 .title {
 	font-size: 12pt;
@@ -63,17 +62,17 @@ img {
 	margin-bottom: 50px;
 }
 a:link {
-  color: #ffffed;
+  color: blue;
   background-color: transparent;
   text-decoration: underline;
 }
 a:visited {
-  color: #ffffed;
+  color: blue;
   background-color: transparent;
   text-decoration: underline;
 }
 a:hover {
-  color: #ffffce;
+  color: blue;
   background-color: transparent;
   text-decoration: underline;
 }
