--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -11,7 +11,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #ffdec2;
+	background-color: #ffd688;
 }
 img {
 	width: 93%;
