--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -62,17 +62,17 @@ img {
 	margin-bottom: 50px;
 }
 a:link {
-  color: blue;
+  color: #88c7ff;
   background-color: transparent;
   text-decoration: underline;
 }
 a:visited {
-  color: blue;
+  color: #88c7ff;
   background-color: transparent;
   text-decoration: underline;
 }
 a:hover {
-  color: blue;
+  color: #88c7ff;
   background-color: transparent;
   text-decoration: underline;
 }
