--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -90,7 +90,7 @@ a:active {
 	<br>
 	<br>
 	
-<img src="images/tomspage top games.png" class="logo">
+<img src="images/tomspage top games white.png" class="logo">
 	
 <p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="masthead">by Tom</p>
