--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -34,7 +34,7 @@ img {
 	font-weight: bold;
 	font-style: italic;
 	line-height: 8px;
-	color: #white;
+	color: white;
 }
 .body {
 	font-size: 12pt;
