--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -62,17 +62,17 @@ img {
 	margin-bottom: 50px;
 }
 a:link {
-  color: #3182fb;
+  color: #2a84ff;
   background-color: transparent;
   text-decoration: underline;
 }
 a:visited {
-  color: #3182fb;
+  color: #2a84ff;
   background-color: transparent;
   text-decoration: underline;
 }
 a:hover {
-  color: #3182fb;
+  color: #2a84ff;
   background-color: transparent;
   text-decoration: underline;
 }
