--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ a:active {
 
 <p class="body">Super special series:</p>
 	<p class="body" style="font-style:normal; line-height: 25px;">
-		<a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a><br>
+		<a href="https://www.tomspage.org/sdso">Socially Distant Symphony Orchestra</a><br>
 		<a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a><br>
 		<a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a>
 	</p>	
