--- a/songs/index.html
+++ b/songs/index.html
@@ -114,7 +114,7 @@ a:active {
 	
 <p class="header">––––    2021    ––––</p>
 	
-	<p class="title" title="June 5, 2019"><a href="https://www.tomspage.org/audio/by sea.mp3>”By Sea”</a></p>
+	<p class="title"><a href="https://www.tomspage.org/audio/by sea.mp3>”By Sea”</a></p>
 	<p class="title"><a href="tomspage.org/pizza">Link test</a></p>
 	<p class="title"><a href="tomspage.org/time">test test test</a></p>
 	<p class="title"><a href="tomspage.org/pizzatime">test test test test</a></p>
