--- a/songs/index.html
+++ b/songs/index.html
@@ -121,22 +121,75 @@ a:active {
 
 <p class="header">––––    2019    ––––</p>
 
-<p class="title"><a href="Improv 2019.05.31.mp3" target="_blank">”Improv 05.31.2019”</a></p>
-<p class="title"><a href="Improv 2019.05.15 2.mp3" target="_blank">”Improv 05.15.2019”</a></p>
-<p class="title"><a href="Improv 2019.05.12 1.mp3" target="_blank">”Improv 05.12.2019”</a></p>
-<p class="title"><a href="Improv 2019.05.09.mp3" target="_blank">”Improv 05.09.2019”</a></p>
-<p class="title"><a href="Improv 2019.05.08.mp3" target="_blank">”Improv 05.08.2019”</a></p>
-<p class="title"><a href="Improv 2019.05.06.mp3" target="_blank">”Improv 05.06.2019”</a></p>
-<p class="title"><a href="Improv 2019.05.03.mp3" target="_blank">”Improv 05.03.2019”</a></p>
-<p class="title"><a href="Improv 2019.04.28.mp3" target="_blank">”Improv 04.28.2019”</a></p>
-<p class="title"><a href="Improv 2019.04.27.mp3" target="_blank">”Improv 04.27.2019”</a></p>
-<p class="title"><a href="Improv 2019.04.20.mp3" target="_blank">”Improv 04.20.2019”</a></p>
-<p class="title"><a href="Improv 2019.04.13.mp3" target="_blank">”Improv 04.13.2019”</a></p>
-<p class="title"><a href="Improv 2019.04.02.mp3" target="_blank">”Improv 04.02.2019”</a></p>
-<p class="title"><a href="Improv 2019.03.26.mp3" target="_blank">”Improv 03.26.2019”</a></p>
-<p class="title"><a href="Improv 2019.03.25.mp3" target="_blank">”Improv 03.25.2019”</a></p>
-<p class="title"><a href="Improv 2019.02.03.mp3" target="_blank">”Improv 02.03.2019”</a></p>
-<p class="title"><a href="Improv 2018.05.08.mp3" target="_blank">”Improv 05.08.2018”</a></p>
+<p class="title"><a href="Improv 2019.12.26.mp3" target="_blank">”Improv December 26, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.25.mp3" target="_blank">”Improv December 25, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.23.mp3" target="_blank">”Improv December 23, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.20.mp3" target="_blank">”Improv December 20, 2019 1.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.20 2.mp3" target="_blank">”Improv December 20, 2019 2.mp3"</a></p><p class="title"><a href="Improv 2019.12.20 3 Amie.mp3" target="_blank">”Variation on a Theme by Pure Prairie League #2.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.19.mp3" target="_blank">”Improv December 19, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.16.mp3" target="_blank">”Improv December 16, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.14.mp3" target="_blank">”Improv December 14, 2019 1.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.14 2.mp3" target="_blank">”Improv December 14, 2019 2.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.11.mp3" target="_blank">”Improv December 11, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.10.mp3" target="_blank">”Improv December 10, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.09.mp3" target="_blank">”Improv December 9, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.09 E.mp3" target="_blank">”Blues in E December 9, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.08.mp3" target="_blank">”Improv December 8, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.11.14.mp3" target="_blank">”Improv November 14, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.11.12.mp3" target="_blank">”Improv November 12, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.10.30.mp3" target="_blank">”Improv October 30, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.10.23.mp3" target="_blank">”Improv October 23, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.10.22.mp3" target="_blank">”Improv October 22, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.10.17 yeehaw.mp3" target="_blank">”Yeehaw October 17, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.10.17 2.mp3" target="_blank">”Improv October 17, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.10.16 2.mp3" target="_blank">”Improv October 16, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.10.09 1.mp3" target="_blank">”Improv October 9, 2019.mp3 1"</a></p>
+<p class="title"><a href="Improv 2019.10.09 2.mp3" target="_blank">”Improv October 9, 2019.mp3 2"</a></p>
+<p class="title"><a href="Improv 2019.09.30 1.mp3" target="_blank">”Improv September 30, 2019 1.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.30 2.mp3" target="_blank">”Improv ,September 30 2019 2.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.23.mp3" target="_blank">”Improv September 23, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.22 yeehaw.mp3" target="_blank">”Improv September 22, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.19 1.mp3" target="_blank">”Improv September 19, 2019 1.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.19 2.mp3" target="_blank">”Improv September 19, 2019 2.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.18.mp3" target="_blank">”Improv September 18, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.13.mp3" target="_blank">”Improv September 13, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.07.mp3" target="_blank">”Improv September 7, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.05.mp3" target="_blank">”Improv September 5, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.09.01 Dm.mp3" target="_blank">”Slide into Dm.mp3"</a></p>
+<p class="title"><a href="Improv 2019.08.31.mp3" target="_blank">”Improv August 31, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.08.21.mp3" target="_blank">”Improv August 21, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.08.17 1.mp3" target="_blank">”Improv August 17, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.08.13.mp3" target="_blank">”Improv August 13, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.08.05 E.mp3" target="_blank">”Blue in E August 5, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.08.04.mp3" target="_blank">”Improv August 4, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.07.27.mp3" target="_blank">”Improv July 27, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.07.21.mp3" target="_blank">”Improv July 21, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.07.20.mp3" target="_blank">”Improv July 20, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.07.08.mp3" target="_blank">”Improv July 8, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.06.21 1.mp3" target="_blank">”Improv June 21, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.06.19 2.mp3" target="_blank">”Improv June 19, 2019.mp3”</a></p>
+<p class="title"><a href="Improv 2019.06.16.mp3" target="_blank">”Improv June 16, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.06.14.mp3" target="_blank">”Improv June 14, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.06.14 keys.mp3" target="_blank">”Improv June 14, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.06.10 bass.mp3" target="_blank">”Improv June 10, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.05.31.mp3" target="_blank">”Improv May 31, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.05.15 2.mp3" target="_blank">”Improv May 15, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.05.12 1.mp3" target="_blank">”Improv May 12, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.05.09.mp3" target="_blank">”Improv May 9, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.05.08.mp3" target="_blank">”Improv May 8, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.05.06.mp3" target="_blank">”Improv May 6, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.05.03.mp3" target="_blank">”Improv May 3, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.04.28.mp3" target="_blank">”Improv April 28, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.04.27.mp3" target="_blank">”Improv April 27, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.04.20.mp3" target="_blank">”Improv April 20, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.04.13.mp3" target="_blank">”Improv April 13, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.04.02.mp3" target="_blank">”Improv April 2, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.03.26.mp3" target="_blank">”Improv March 26, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.03.25.mp3" target="_blank">”Improv March 25, 2019.mp3"</a></p>
+<p class="title"><a href="Improv 2019.02.03.mp3" target="_blank">”Improv February 3, 2019.mp3"</a></p>
+<p class="title"><a href="rainy 2019.01.05.mp3" target="_blank">”Variation on a Theme by Pure Prairie League #1.mp3"</a></p>
+<p class="title"><a href="Improv 2018.05.08.mp3" target="_blank">”Improv May 8, 2018.mp3”</a></p>
+
 
 
 
