--- a/songs/index.html
+++ b/songs/index.html
@@ -59,6 +59,7 @@ img {
 	text-align: center;
 	margin-top: 8px;
 	line-height: 20px;
+	a:link 
 }
 a:link {
   color: blue;
@@ -80,6 +81,12 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
+a.title:link { color:#FFF; text-decoration:none; font-weight:normal; }
+a.title:visited { color: #FFF; text-decoration:none; font-weight:normal; }
+a.title:hover { color: #FFF; text-decoration:underline; font-weight:normal; }
+a.title:active { color: #FFF; text-decoration:none; font-weight:normal; }
+
 </style>	 
 </head>
 
