--- a/songs/index.html
+++ b/songs/index.html
@@ -81,10 +81,10 @@ a:active {
   text-decoration: underline;
 }
 
-a.title:link { color:#FFF; text-decoration:none; font-weight:normal; }
-a.title:visited { color: #FFF; text-decoration:none; font-weight:normal; }
-a.title:hover { color: #FFF; text-decoration:underline; font-weight:normal; }
-a.title:active { color: #FFF; text-decoration:none; font-weight:normal; }
+a.title:link { color: #ff3383; text-decoration:none; font-weight:normal; }
+a.title:visited { color: #ff3383; text-decoration:none; font-weight:normal; }
+a.title:hover { color: #ff3383; text-decoration:underline; font-weight:normal; }
+a.title:active { color: #ff3383; text-decoration:none; font-weight:normal; }
 
 </style>	 
 </head>
