--- a/songs/index.html
+++ b/songs/index.html
@@ -59,6 +59,26 @@ img {
 	text-align: center;
 	margin-top: 8px;
 	line-height: 20px;
+	a:link {
+		color: #ff3383; 
+		text-decoration:none; 
+		font-weight:normal; 
+	}
+	a:visited { 
+		color: #ff3383; 
+		text-decoration:none; 
+		font-weight:normal; 
+	}
+	a:hover { 
+		color: #ff3383; 
+		text-decoration:underline; 
+		font-weight:normal; 
+	}
+	a:active { 
+		color: #ff3383; 
+		text-decoration:none; 
+		font-weight:normal; 
+	}
 }
 a:link {
   color: blue;
@@ -80,11 +100,6 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
-
-a.title:link { color: #ff3383; text-decoration:none; font-weight:normal; }
-a.title:visited { color: #ff3383; text-decoration:none; font-weight:normal; }
-a.title:hover { color: #ff3383; text-decoration:underline; font-weight:normal; }
-a.title:active { color: #ff3383; text-decoration:none; font-weight:normal; }
 
 </style>	 
 </head>
