--- a/songs/index.html
+++ b/songs/index.html
@@ -59,23 +59,24 @@ img {
 	text-align: center;
 	margin-top: 8px;
 	line-height: 20px;
-	a:link {
+	}
+	. title a:link {
 		color: #ff3383; 
 		text-decoration:none; 
 		font-weight:normal; 
 	}
-	a:visited { 
+	. title a:visited { 
 		color: #ff3383; 
 		text-decoration:none; 
 		font-weight:normal; 
 	}
-	a:hover { 
+	.title a:hover { 
 		color: #ff3383; 
 		text-decoration:underline; 
 		font-weight:normal; 
 	}
-	a:active { 
-		color: #ff3383; 
+	.title a:active { 
+		color: #84f542; 
 		text-decoration:none; 
 		font-weight:normal; 
 	}
