--- a/songs/index.html
+++ b/songs/index.html
@@ -36,6 +36,26 @@ img {
 	font-style: italic;
 	line-height: 8px;
 }
+	.masthead a:link {
+ 		color: blue;
+		background-color: transparent;
+		text-decoration: underline;
+	}
+	.masthead a:visited {
+		color: blue;
+		background-color: transparent;
+		text-decoration: underline;
+	}
+	.masthead a:hover {
+		color: blue;
+		background-color: transparent;
+		text-decoration: underline;
+	}
+	.masthead a:active {
+		color: #ff3383;
+		background-color: transparent;
+		text-decoration: underline;
+	}
 .body {
 	font-size: 12pt;
 	font-family: trebuchet MS;
@@ -60,14 +80,14 @@ img {
 	margin-top: 8px;
 	line-height: 20px;
 	}
-	. title a:link {
+	.title a:link {
 		color: #ff3383; 
-		text-decoration:none; 
+		text-decoration:underline; 
 		font-weight:normal; 
 	}
-	. title a:visited { 
+	.title a:visited { 
 		color: #ff3383; 
-		text-decoration:none; 
+		text-decoration:underline; 
 		font-weight:normal; 
 	}
 	.title a:hover { 
@@ -77,30 +97,10 @@ img {
 	}
 	.title a:active { 
 		color: #84f542; 
-		text-decoration:none; 
+		text-decoration:underline; 
 		font-weight:normal; 
 	}
-}
-a:link {
-  color: blue;
-  background-color: transparent;
-  text-decoration: underline;
-}
-a:visited {
-  color: blue;
-  background-color: transparent;
-  text-decoration: underline;
-}
-a:hover {
-  color: blue;
-  background-color: transparent;
-  text-decoration: underline;
-}
-a:active {
-  color: #ff3383;
-  background-color: transparent;
-  text-decoration: underline;
-}
+
 
 </style>	 
 </head>
