--- a/songs/index.html
+++ b/songs/index.html
@@ -147,7 +147,7 @@ img {
 <p class="title"><a href="Carolina 2021.03.13.mp3" target="_blank" title=”March 13, 2021”>"Variation on a Theme by JT.mp3”</a> (<a href=”https://www.youtube.com/watch?v=67343pHUW5o”>▶️</a>)</p>
 <p class="title"><a href="Improv 2021.03.10.mp3" target="_blank">"Improv March 10, 2021 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.10 2.mp3" target="_blank">"Improv March 10, 2021 #2.mp3"</a></p>
-​​<p class="title"><a href="Improv 2021.03.07.mp3" target="_blank">"Improv March 7, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.03.07.mp3" target="_blank">"Improv March 7, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.06.mp3" target="_blank">"Improv March 6, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.05 yeehaw.mp3" target="_blank">"Yeehaw March 5, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.04 😎.mp3" target="_blank">"Improv March 4, 2021 😎.mp3"</a></p>
@@ -169,7 +169,7 @@ img {
 
 <p class="header">–––– 2020 ––––</p>
 
-<p class="title"><a href="Song for 2020.mp3" target="_blank" title=”December 18, 2020”>".mp3"</a></p>
+<p class="title"><a href="Song for 2020.mp3" target="_blank" title=”December 18, 2020”>"Song for 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.12.15.mp3" target="_blank">"Improv December 15, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.12.04.mp3" target="_blank">"Improv December 4, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.11.11.mp3" target="_blank">"Improv November 11, 2020.mp3"</a></p>
