--- a/songs/index.html
+++ b/songs/index.html
@@ -141,7 +141,7 @@ img {
 <p class="title"><a href="Improv 2021.03.25.mp3" target="_blank">"Improv March 25, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.25 frisell.mp3" target="_blank" title=”March 25, 2021”>"Variation on a Theme by Frisell #4.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.24 vivaldi.mp3" target="_blank">"Song for Antonio Vivaldi #1 ❄️️.mp3"</a></p>
-<p class="title"><a href="Quixote in Desert II.mp3" target="_blank" title=”March 17, 2021”>"Quixote in Desert II.mp3"</a></p>
+<p class="title" title="March 17, 2021"><a href="Quixote in Desert II.mp3" target="_blank">"Quixote in Desert II.mp3"</a></p>
 <p class="title"><a href="Loop 2021.03.16.mp3" target="_blank">"Loop March 16, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.15.mp3" target="_blank">"Improv March 15, 2021.mp3"</a></p>
 <p class="title"><a href="Carolina 2021.03.13.mp3" target="_blank" title=”March 13, 2021”>"Variation on a Theme by JT.mp3”</a> (<a href=”https://www.youtube.com/watch?v=67343pHUW5o”>▶️</a>)</p>
