--- a/songs/index.html
+++ b/songs/index.html
@@ -135,21 +135,16 @@ img {
 	<br>
 	
 <p class="header">–––– 2021 ––––</p>
-	
-	<p class="title"><i>(April - September songs coming soon!)</i></p>
-	
-	<br>
-
 
 <p class="title"><a href="Improv 2021.03.30 🗣.mp3" target="_blank">"Improv March 30, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.27.mp3" target="_blank">"Improv March 27, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.25.mp3" target="_blank">"Improv March 25, 2021.mp3"</a></p>
-<p class="title"><a href="Improv 2021.03.25 frisell.mp3" target="_blank" title=”March 25, 2021”>"Variation on a Theme by Frisell #4.mp3"</a></p>
+<p class="title" title=”March 25, 2021”><a href="Improv 2021.03.25 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #4.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.24 vivaldi.mp3" target="_blank">"Song for Antonio Vivaldi #1 ❄️️.mp3"</a></p>
-<p class="title" title="March 17, 2021"><a href="Quixote in Desert II.mp3" target="_blank">"Quixote in Desert II.mp3"</a></p>
+<p class="title" title=”March 17, 2021”><a href="Quixote in Desert II.mp3" target="_blank">"Quixote in Desert II.mp3"</a></p>
 <p class="title"><a href="Loop 2021.03.16.mp3" target="_blank">"Loop March 16, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.15.mp3" target="_blank">"Improv March 15, 2021.mp3"</a></p>
-<p class="title"><a href="Carolina 2021.03.13.mp3" target="_blank" title=”March 13, 2021”>"Variation on a Theme by JT.mp3”</a> (<a href=”https://www.youtube.com/watch?v=67343pHUW5o”>▶️</a>)</p>
+<p class="title" title=”March 13, 2021”><a href="Carolina 2021.03.13.mp3" target="_blank">"Variation on a Theme by JT.mp3”</a> (<a href=”https://www.youtube.com/watch?v=67343pHUW5o”>▶️</a>)</p>
 <p class="title"><a href="Improv 2021.03.10.mp3" target="_blank">"Improv March 10, 2021 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.10 2.mp3" target="_blank">"Improv March 10, 2021 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.07.mp3" target="_blank">"Improv March 7, 2021.mp3"</a></p>
@@ -168,19 +163,19 @@ img {
 <p class="title"><a href="Improv 2021.01.21.mp3" target="_blank">"Improv January 21, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.01.15.mp3" target="_blank">"Improv January 15, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.01.14.mp3" target="_blank">"Improv January 14, 2021.mp3"</a></p>
-<p class="title"><a href="Song for the United States of America.mp3" target="_blank" title=”January 7, 2021”>"Song for the United States of America.mp3"</a> (<a href=”https://www.instagram.com/p/CJwiI3JMrTV/” target=”_blank”>🖼️
+<p class="title" title=”January 7, 2021”><a href="Song for the United States of America.mp3" target="_blank">"Song for the United States of America.mp3"</a> (<a href=”https://www.instagram.com/p/CJwiI3JMrTV/” target=”_blank”>🖼️
 </a>)</p>
 <p class="title"><a href="Improv 2021.01.08.mp3" target="_blank">"Improv January 5, 2021.mp3"</a></p>
 
 <p class="header">–––– 2020 ––––</p>
 
-<p class="title"><a href="Song for 2020.mp3" target="_blank" title=”December 18, 2020”>"Song for 2020.mp3"</a></p>
+<p class="title" “title=”December 18, 2020”><a href="Song for 2020.mp3" target="_blank>".mp3"</a></p>
 <p class="title"><a href="Improv 2020.12.15.mp3" target="_blank">"Improv December 15, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.12.04.mp3" target="_blank">"Improv December 4, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.11.11.mp3" target="_blank">"Improv November 11, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.11.10 yeehaw.mp3" target="_blank">"Yeehaw November 10, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.11.05.mp3" target="_blank">"Improv November 5, 2020.mp3"</a></p>
-<p class="title"><a href="Improv 2020.11.03 CNN.mp3" target="_blank" title=”November 3, 2020”>"Song for CNN Live Election Coverage.mp3"</a></p>
+<p class="title" title=”November 3, 2020”><a href="Improv 2020.11.03 CNN.mp3" target="_blank">"Song for CNN Live Election Coverage.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.30.mp3" target="_blank">"Improv October 30, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.27.mp3" target="_blank">"Improv October 27, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.26.mp3" target="_blank">"Improv October 26, 2020.mp3"</a></p>
@@ -224,14 +219,14 @@ img {
 <p class="title"><a href="Improv 2020.05.05 1.mp3" target="_blank">"Improv May 5, 2020 1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.05.05 2.mp3" target="_blank">"Improv May 5, 2020 2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.04.18.mp3" target="_blank">"Improv April 18, 2020.mp3"</a></p>
-<p class="title"><a href="Improv 2020.04.18 frisell.mp3" target="_blank" title=”April 18, 2020”>"Variation on a Theme by Frisell #3.mp3"</a></p>
-<p class="title"><a href="Improv 2020.04.18 2 frisell.mp3" target="_blank" title=”April 18, 2020”>"Variation on a Theme by Frisell #3.5.mp3"</a></p>
+<p class="title" title=”April 18, 2020”><a href="Improv 2020.04.18 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #3.mp3"</a></p>
+<p class="title" title=”April 18, 2020”><a href="Improv 2020.04.18 2 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #3.5.mp3"</a></p>
 <p class="title"><a href="Improv 2020.04.16.mp3" target="_blank">"Improv April 16, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.04.13.mp3" target="_blank">"Improv April 13, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.04.12.mp3" target="_blank">"Improv April 12, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.04.07.mp3" target="_blank">"Improv April 7, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.04.03.mp3" target="_blank">"Improv April 3, 2020.mp3"</a></p>
-<p class="title"><a href="Quixote in Desert I.mp3" target="_blank" title=”April 2, 2020”>"Quixote in Desert I.mp3"</a></p>
+<p class="title" title=”April 2, 2020”><a href="Quixote in Desert I.mp3" target="_blank">"Quixote in Desert I.mp3"</a></p>
 <p class="title"><a href="Improv 2020.04.01.mp3" target="_blank">"Improv April 1, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.03.29.mp3" target="_blank">"Improv March 29, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.03.27.mp3" target="_blank">"Improv March 27, 2020.mp3"</a></p>
@@ -246,7 +241,7 @@ img {
 <p class="title"><a href="Improv 2020.03.05.mp3" target="_blank">"Improv March 5, 2020 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.03.05 2.mp3" target="_blank">"Improv March 5, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.03.02.mp3" target="_blank">"Improv March 2, 2020.mp3"</a></p>
-<p class="title"><a href="Improv 2020.02.24 (frisell).mp3" target="_blank" title=”February 24, 2020”>"Variation on a Theme by Frisell #2.mp3"</a></p>
+<p class="title" title=”February 24, 2020”><a href="Improv 2020.02.24 (frisell).mp3" target="_blank">"Variation on a Theme by Frisell #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.23.mp3" target="_blank">"Improv February 23, 2020 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.23 2.mp3" target="_blank">"Improv February 23, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.21 1.mp3" target="_blank">"Improv February 21, 2020 #1 🎛.mp3"</a></p>
@@ -261,7 +256,7 @@ img {
 <p class="title"><a href="Grace 2020.02.15..mp3" target="_blank">"Grace February 15, 2020.mp3”</a></p>
 <p class="title"><a href="Improv 2020.02.15.mp3" target="_blank">"Improv February 15, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.12 E.mp3" target="_blank">"Blues in E February 2 , 2020.mp3"</a></p>
-<p class="title"><a href="​​Improv 2020.02.09 1.mp3" target="_blank">"Improv February 9, 2020 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2020.02.09 1.mp3" target="_blank">"Improv February 9, 2020 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.09 2.mp3" target="_blank">"Improv February 9, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.06.mp3" target="_blank">"Improv February 6, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.03 2.mp3" target="_blank">"Improv February 3, 2020.mp3"</a></p>
@@ -270,7 +265,7 @@ img {
 <p class="title"><a href="Improv 2020.01.31 2.mp3" target="_blank">"Improv January 31, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.27.mp3" target="_blank">"Improv January 27, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.24.mp3" target="_blank">"Improv January 24, 2020.mp3"</a></p>
-<p class="title"><a href="Improv 2020.01.24 frisell.mp3" target="_blank" title=”January 24, 2020”>"Variation on a Theme by Frisell #1.mp3"</a> (<a href=”https://www.youtube.com/watch?v=Qr5YPpOV94M”>▶️</a>)</p>
+<p class="title" title=”January 24, 2020”><a href="Improv 2020.01.24 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #1.mp3"</a> (<a href=”https://www.youtube.com/watch?v=Qr5YPpOV94M”>▶️</a>)</p>
 <p class="title"><a href="Improv 2020.01.23 1.mp3" target="_blank">"Improv January 23, 2020 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.23 2.mp3" target="_blank">"Improv January 23, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.23 3.mp3" target="_blank">"Improv January 23, 2020 3.mp3"</a></p>
@@ -287,8 +282,7 @@ img {
 <p class="title"><a href="Improv 2019.12.25.mp3" target="_blank">"Improv December 25, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.12.23.mp3" target="_blank">"Improv December 23, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.12.20.mp3" target="_blank">"Improv December 20, 2019 #1.mp3"</a></p>
-<p class="title"><a href="Improv 2019.12.20 2.mp3" target="_blank">"Improv December 20, 2019 #2.mp3"</a></p>
-	<p class="title"><a href="Improv 2019.12.20 3 Amie.mp3" target="_blank">"Variation on a Theme by Pure Prairie League #2.mp3"</a></p>
+<p class="title"><a href="Improv 2019.12.20 2.mp3" target="_blank">"Improv December 20, 2019 #2.mp3"</a></p><p class="title"><a href="Improv 2019.12.20 3 Amie.mp3" target="_blank">"Variation on a Theme by Pure Prairie League #2.mp3"</a></p>
 <p class="title"><a href="Improv 2019.12.19.mp3" target="_blank">"Improv December 19, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.12.16.mp3" target="_blank">"Improv December 16, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.12.14.mp3" target="_blank">"Improv December 14,2019 #1.mp3"</a></p>
@@ -309,7 +303,7 @@ img {
 <p class="title"><a href="Grace 2019.10.14.mp3" target="_blank">"Grace October 14, 2019.mp3”</a></p>
 <p class="title"><a href="Improv 2019.10.09 1.mp3" target="_blank">"Improv October 9, 2019.mp3 1"</a></p>
 <p class="title"><a href="Improv 2019.10.09 2.mp3" target="_blank">"Improv October 9, 2019.mp3 2"</a></p>
-<p class="title"><a href="Ziggy 10.1.19.mp3" target="_blank"  title=”October 1, 2019”>"Ziggy Star🐟.mp3"</a> (Bowie)</p>
+<p class="title" title=”October 1, 2019”><a href="Ziggy 10.1.19.mp3" target="_blank">"Ziggy Star🐟.mp3"</a> (Bowie)</p>
 <p class="title"><a href="Improv 2019.09.30 1.mp3" target="_blank">"Improv September 30, 2019 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2019.09.30 2.mp3" target="_blank">"Improv ,September 30 2019 2.mp3"</a></p>
 <p class="title"><a href="Improv 2019.09.23.mp3" target="_blank">"Improv September 23, 2019.mp3"</a></p>
@@ -325,10 +319,10 @@ img {
 <p class="title"><a href="Improv 2019.08.21.mp3" target="_blank">"Improv August 21, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.08.17 1.mp3" target="_blank">"Improv August 17, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.08.13.mp3" target="_blank">"Improv August 13, 2019.mp3"</a></p>
-<p class="title"><a href="Ziggy 8.12.19.mp3" target="_blank"  title=”August 12, 2019”>"Ziggy Stardust.mp3"</a> (Bowie)</p>
+<p class="title" title=”August 12, 2019”><a href="Ziggy 8.12.19.mp3" target="_blank">"Ziggy Stardust.mp3"</a> (Bowie)</p>
 <p class="title"><a href="Improv 2019.08.05 E.mp3" target="_blank">"Blues in E August 5, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.08.04.mp3" target="_blank">"Improv August 4, 2019.mp3"</a></p>
-<p class="title"><a href="it's no game.mp3”" target="_blank" title=”July 28, 2019”>"It’s No Game.mp3"</a> (Bowie)</p>
+<p class="title" title=”July 28, 2019”><a href="it's no game.mp3”" target="_blank">"It’s No Game.mp3"</a> (Bowie)</p>
 <p class="title"><a href="Improv 2019.07.27.mp3" target="_blank">"Improv July 27, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.07.21.mp3" target="_blank">"Improv July 21, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.07.20.mp3" target="_blank">"Improv July 20, 2019.mp3"</a></p>
@@ -345,29 +339,28 @@ img {
 <p class="title"><a href="Improv 2019.05.09.mp3" target="_blank">"Improv May 09, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.05.08.mp3" target="_blank">"Improv May 08, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.05.06.mp3" target="_blank">"Improv May 06, 2019.mp3"</a></p>
-<p class="title"><a href="by sea.mp3" target="_blank" title=”June 5, 2019”>"By Sea.mp3”</a></p>
+<p class="title" title=”June 5, 2019”><a href="by sea.mp3" target="_blank">"By Sea.mp3”</a></p>
 <p class="title"><a href="Improv 2019.05.03.mp3" target="_blank">"Improv May 03, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.04.28.mp3" target="_blank">"Improv April 28, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.04.27.mp3" target="_blank">"Improv April 27, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.04.20.mp3" target="_blank">"Improv April 20, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.04.13.mp3" target="_blank">"Improv April 13, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.04.02.mp3" target="_blank">"Improv April 02, 2019.mp3"</a></p>
-<p class="title"><a href="Out of tune.mp3" target="_blank" title=”March 31, 2019”>"Out of Tune.mp3"</a></p>
+<p class="title" title=”March 31, 2019”><a href="Out of tune.mp3" target="_blank">"Out of Tune.mp3"</a></p>
 <p class="title"><a href="Improv 2019.03.26.mp3" target="_blank">"Improv March 26, 2019.mp3"</a></p>
 <p class="title"><a href="Improv 2019.03.25.mp3" target="_blank">"Improv March 25, 2019.mp3"</a></p>
-<p class="title"><a href="GRYND KYNTRYL.mp3" target="_blank" title=”March 18, 2019”>"GRYND KYNTRYL.mp3”</a></p>
-<p class="title"><a href="smash mouth 3.15.19.mp3" target="_blank" title=”March 15, 2019”>"Variation on a Theme by Smash Mouth #1.mp3"</a> (<a href=https://www.youtube.com/watch?v=pNTOEyqDaNc" target="_blank">▶️</a>)</p>
+<p class="title" title=”March 18, 2019”><a href="GRYND KYNTRYL.mp3" target="_blank">"GRYND KYNTRYL.mp3”</a></p>
+<p class="title" title=”March 15, 2019”><a href="smash mouth 3.15.19.mp3" target="_blank">"Variation on a Theme by Smash Mouth #1.mp3"</a> (<a href=https://www.youtube.com/watch?v=pNTOEyqDaNc" target="_blank">▶️</a>)</p>
 <p class="title"><a href="Improv 2019.02.03.mp3" target="_blank">"Improv February 03, 2019.mp3"</a></p>
-<p class="title"><a href="the case for winter dreary 2019.01.23.mp3" target="_blank" title=”January 23, 2019”>"Song for Winter.mp3"</a></p>
-<p class="title"><a href="sunshine 1.14.19.mp3" target="_blank" title=”January 14, 2019”>"☀️.mp3"</a></p>
+<p class="title" title=”January 23, 2019”><a href="the case for winter dreary 2019.01.23.mp3" target="_blank">"Song for Winter.mp3"</a></p>
+<p class="title" title=”January 14, 2019”><a href="sunshine 1.14.19.mp3" target="_blank">"☀️.mp3"</a></p>
 <p class="title"><a href="rainy 2019.01.05.mp3" target="_blank">"Variation on a Theme by Pure Prairie League #1.mp3"</a></p>
 
 <p class="header">–––– 2018 ––––</p>
 
-<p class="title"><a href="Rach 3.mp3" target="_blank" title=”November 23, 2018”>"Variation on a Theme by Rachmaninoff.mp3"</a> (<a href=”https://www.youtube.com/watch?v=UKziGGumuEk" target="_blank">▶️</a>)</p>
-<p class="title"><a href="fire and ice.mp3" target="_blank" title=”June 15, 2018”>"Fire & Ice.mp3”</a></p>
+<p class="title" title=”November 23, 2018”><a href="Rach 3.mp3" target="_blank">"Variation on a Theme by Rachmaninoff.mp3"</a> (<a href=”https://www.youtube.com/watch?v=UKziGGumuEk" target="_blank">▶️</a>)</p>
+<p class="title" title=”June 15, 2018”><a href="fire and ice.mp3" target="_blank">"Fire & Ice.mp3”</a></p>
 <p class="title"><a href="Improv 2018.05.08.mp3" target="_blank">"Improv May 8, 2018.mp3”</a></p>
-
 
 
 </body>
