--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -151,7 +151,7 @@ img {
 <p class="title">"usual suspects.jpg"</p>
 <p class="body"><i>Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.</i></p>
 
-<img src="images/usual suspects (amendment 8).jpg" title="November 8, 2019">
+<img src="images/ninth v2.jpg" title="November 8, 2019">
 
 	</br>
 	</br>
@@ -160,7 +160,7 @@ img {
 <p class="title">"in shadow.jpg"</p>
 <p class="body"><i>The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.</i></p>
 
-<img src="images/in shadow (amendment 9).jpg" title="November 9, 2019">
+<img src="images/in shadow v2.png" title="November 9, 2019">
 
 	</br>
 	</br>
@@ -313,7 +313,7 @@ img {
 <p class="title">"rite.jpg"</p>
 <p class="body"><i>Section 1: The right of citizens of the United States, who are eighteen years of age or older, to vote shall not be denied or abridged by the United States or by any State on account of age. <br> Section 2: The Congress shall have power to enforce this article by appropriate legislation.</i></p>
 
-<img src="images/rite (amendment 26).jpg" title="November 26, 2019">
+<img src="images/rite v2.jpg" title="November 26, 2019">
 
 	</br>
 	</br>
