--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -336,6 +336,7 @@ img {
 </br>
 </br>
 <img src="images/truman shows 2.jpg" class="truman">
+<p class="title" margin-top=5px><i>"truman shows.jpg" :)</i></p>
 <p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
 
 </body>
