--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -58,7 +58,7 @@ img {
   	margin-right: auto;
      	width: 70%;
 	height: auto;
-	margin-bottom: 35px;
+	margin-bottom: 5px;
 	box-shadow: 0px 2px 5px 0px #696969;
 }	
 </style>	
@@ -336,7 +336,8 @@ img {
 </br>
 </br>
 <img src="images/truman shows 2.jpg" class="truman">
-<p class="title" margin-top=5px><i>"truman shows.jpg" :)</i></p>
+<p class="title">"truman shows.jpg" :)</p>
+<br>
 <p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
 
 </body>
