--- a/songs/index.html
+++ b/songs/index.html
@@ -182,7 +182,7 @@ img {
 <p class="title" title="June 7, 2021"><a href="Variation on a theme by Mayer.mp3" target="_blank">"Variation on a Theme by Mayer and Scofield of a Theme by Charles.mp3"</a> (<a href="https://www.youtube.com/watch?v=KlCWsh3Unl8" target="_blank">▶️</a>)</p>
 <p class="title"><a href="Improv 2021.06.07.mp3" target="_blank">"Improv June 7, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.06.03 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #5.mp3"</a></p>
-<p class="title" title="May 31, 2021"><a href="Grapevine.mp3" target="_blank">"👂➡️🍇🌿.mp3"</a> (🧔🏾)</p>
+<p class="title" title="May 31, 2021"><a href="Grapevine.mp3" target="_blank">"👂➡️🍇🌿.mp3"</a> (Marvin Gaye)</p>
 <p class="title"><a href="Improv 2021.05.30.mp3" target="_blank">"Improv May 30, 2021 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2021.05.30 2.mp3" target="_blank">"Improv May 30, 2021 #2.mp3"</a></p>
 <p class="title" title="May 26, 2021"><a href="🐝.mp3" target="_blank">"🐝.mp3"</a></p>
@@ -432,7 +432,11 @@ img {
 <p class="title" title="June 9, 2018"><a href="Short Song for Donald Trump.mp3" target="_blank">"Short Song for Donald Trump.mp3"</a></p>
 <p class="title"><a href="Improv 2018.05.08.mp3" target="_blank">"Improv May 8, 2018.mp3"</a></p>
 
-
+</br>
+</br>
+<h1 style="font-family:garamond;text-align:right;"><i>by Tom</i></h1>
+</br>
+<p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
 
 
 </body>
