--- a/songs/index.html
+++ b/songs/index.html
@@ -249,7 +249,7 @@ img {
 <p class="title"><a href="Improv 2020.10.21.mp3" target="_blank">"Improv October 21, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.16.mp3" target="_blank">"Improv October 16, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.14.mp3" target="_blank">"Improv October 14, 2020.mp3"</a></p>
-<p class="title"><a href="Improv 2020.10.03 weberwav.mp3" target="_blank">"Improv , 2020.mp3"</a> (<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/weberwav.jpg">🖼️</a>)</p>
+<p class="title"><a href="Improv 2020.10.03 weberwav.mp3" target="_blank">"Improv October 3, 2020.mp3"</a> (<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/weberwav.jpg" target="_blank">🎨</a>)</p>
 <p class="title"><a href="Improv 2020.09.24.mp3" target="_blank">"Improv September 24, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.09.21.mp3" target="_blank">"Improv September 21, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.09.11.mp3" target="_blank">"Improv September 11, 2020.mp3"</a></p>
