--- a/videos/index.html
+++ b/videos/index.html
@@ -106,8 +106,9 @@ a:active {
 	</form>
 
 	
-	
+<p class="masthead">Test test test page under construction while updates are coded :) test test test <p>	
 <iframe width="560" height="315" src="https://www.youtube.com/embed/J2udTFBCmPg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
+	<iframe class="title" src="https://www.youtube.com/watch?v=3V726_HShyY"></iframe>
 </body>
 </html>
