--- a/videos/index.html
+++ b/videos/index.html
@@ -18,6 +18,11 @@ img {
 	height: auto;
 	box-shadow: 0px 2px 5px 0px #696969;
 }
+iframe {
+	aspect-ratio: 1/1;
+	width: 100%;
+	box-shadow: 0px 2px 5px 0px #aaaaaa;
+}
 .logo {
 	display: block;
  	margin-left: auto;
@@ -107,8 +112,11 @@ a:active {
 
 	
 <p class="masthead">Test test test page under construction while updates are coded :) test test test <p>	
-<iframe width="560" height="315" src="https://www.youtube.com/embed/J2udTFBCmPg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<br>
+	<br>
 	
-	<iframe class="title" src="https://www.youtube.com/watch?v=3V726_HShyY"></iframe>
+<iframe src="https://www.youtube.com/watch?v=J2udTFBCmPg"></iframe>
+<!-- ^round and round -->
+
 </body>
 </html>
