--- a/videos/index.html
+++ b/videos/index.html
@@ -114,7 +114,23 @@ a:active {
 <p class="masthead">Test test test page under construction while updates are coded :) test test test <p>	
 	<br>
 	<br>
+
 	
+<iframe src="https://www.youtube.com/watch?v=Dv8tu13Mws0"></iframe>
+<!-- ^bowie says -->
+
+<iframe src="https://www.youtube.com/watch?v=BIrec1QMmJc"></iframe>
+<!-- ^skyline -->
+
+<iframe src="https://www.youtube.com/watch?v=7TqRYq2Fd2M"></iframe>
+<!-- ^chateau -->
+
+<iframe src="https://www.youtube.com/watch?v=sGYOtJnWlSY"></iframe>
+<!-- ^ashes -->
+
+<iframe src="https://www.youtube.com/watch?v=yceaOsbQzZk"></iframe>
+<!-- ^pigeon -->
+
 <iframe src="https://www.youtube.com/watch?v=J2udTFBCmPg"></iframe>
 <!-- ^round and round -->
 
